@@ -4,14 +4,15 @@ import com.songspasssta.common.exception.ExceptionCode;
 import com.songspasssta.common.exception.NaverApiException;
 import com.songspasssta.ploggingservice.client.NaverLocalSearchClient;
 import com.songspasssta.ploggingservice.dto.response.NaverSearchResponse;
-import com.songspasssta.ploggingservice.dto.response.PlaceResponseDto;
+import com.songspasssta.ploggingservice.dto.response.PlaceResponse;
 import feign.FeignException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,34 +22,29 @@ public class PlaceService {
     private final NaverLocalSearchClient naverLocalSearchClient;
 
     /**
-     * 네이버 로컬 검색 API를 호출하여 도로명 주소 검색 결과를 받아옵니다.
-     * 검색 결과에서 필요한 장소명, 도로명 주소, 위도, 경도 정보를 추출하여,
-     * PlaceResponseDto 형태로 반환
-     *
-     * @param query 검색어 (도로명 주소의 일부)
-     * @return 장소 정보 리스트
+     * 네이버 로컬 검색 API를 호출하여 도로명 주소 검색 결과를 받아옴
+     * 검색 결과에서 필요한 장소명, 도로명 주소, 위도, 경도 정보를 추출
      */
-
-    public List<PlaceResponseDto> getLocationInfo(String query) {
+    public ResponseEntity<PlaceResponse> getLocationInfo(String query) {
         try {
+            // 네이버 장소 검색 API 호출
             NaverSearchResponse response = naverLocalSearchClient.searchLocal(query, 5);
 
-            List<PlaceResponseDto> locationInfoList = response.getItems().stream()
-                    .map(item -> new PlaceResponseDto(
-                            item.getTitle().replaceAll("<(/)?b>", ""), // <b> 태그 제거
-                            item.getRoadAddress(),
+            // 필요한 장소 정보만 추출
+            List<PlaceResponse.PlaceDto> locationInfoList = response.getItems().stream()
+                    .map(item -> new PlaceResponse.PlaceDto(
                             Double.parseDouble(item.getMapy()),
-                            Double.parseDouble(item.getMapx())))
-                    .collect(Collectors.toList());
+                            Double.parseDouble(item.getMapx()),
+                            item.getRoadAddress(),
+                            // 장소 정보에 있는 불필요한 <b>와 </b>값 제거
+                            StringUtils.replace(item.getTitle(), "<b>", "").replace("</b>", "")
+                    )).toList();
 
-            log.info(locationInfoList.toString());
-            return locationInfoList;
-        }  catch (FeignException e) {
-            log.error("네이버 API 호출 오류: {}", e.getMessage(), e);
-            throw new NaverApiException(ExceptionCode.NAVER_API_ERROR, e);
-        } catch (Exception e) {
-            log.error("알 수 없는 오류: {}", e.getMessage(), e);
-            throw new NaverApiException(ExceptionCode.INTERNAL_SERVER_ERROR, e);
+            log.info("장소 정보 조회 성공: {}", locationInfoList);
+            return ResponseEntity.ok(new PlaceResponse(locationInfoList));
+        } catch (FeignException e) {
+            log.error("네이버 API 호출 실패: {}", e.getMessage(), e);
+            throw new NaverApiException(ExceptionCode.NAVER_API_ERROR);
         }
     }
 }
