@@ -1,13 +1,11 @@
 package com.songspasssta.trashservice.service;
 
-import com.songspasssta.dto.response.TrashResponseDto;
+import com.songspasssta.trashservice.dto.response.TrashResponse;
 import com.songspasssta.trashservice.domain.repository.TrashRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -17,17 +15,20 @@ public class TrashService {
 
     /**
      * 모든 쓰레기 장소 조회
-     * @return List<TrashResponseDto>
      */
-    public List<TrashResponseDto> getAllTrash() {
-        return trashRepository.findAll().stream()
-                .map(trash -> new TrashResponseDto(
-                        trash.getId(),
-                        trash.getLatitude(),
-                        trash.getLongitude(),
-                        trash.getRoadAddr(),
-                        trash.getPlaceInfo()
-                ))
-                .collect(Collectors.toList());
+    public ResponseEntity<TrashResponse> getAllTrash() {
+        return ResponseEntity.ok(
+                new TrashResponse(
+                        trashRepository.findAll().stream()
+                                .map(trash -> new TrashResponse.TrashDto(
+                                        trash.getId(),
+                                        trash.getLatitude(),
+                                        trash.getLongitude(),
+                                        trash.getRoadAddr(),
+                                        trash.getPlaceInfo()
+                                ))
+                                .toList()
+                )
+        );
     }
 }
